# email-triage-openenv

./: Dockerfile  LICENSE  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
config/: constants.py
data/: emails.json
env/: email_env.py  graders.py  models.py  tasks.py  utils.py
server/: app.py
